@@ -22,3 +22,7 @@ greaves.shp
 spiked_shield.shp
 mr_faces.shp
 mr_intro.shp
+firesword.shp
+greencloak.shp
+greycloak.shp
+ring_of_protection.shp
