@@ -5,8 +5,8 @@ NPCs:
 
 Name			shape		Artist
 
-Jaana			490		Philip Gottschalk
-Sentri			462		Philip
+Jaana			490		Oblivious
+Sentri			462		Philip Gottschalk
 Julia			454		Philip
 Katrina			452		Philip
 Tseramed		460		Philip
@@ -28,8 +28,8 @@ Magic gorget		843		Adam
 Ankh Amulet		955/0		Oblivious
 Heart Amulet		955/2		Adam
 FoV amulets		955/7-10	Willem Jan
-Grey cloak		285/0		-
-Green cloak		285/1		-
+Grey cloak		285/0		Oblivious
+Green cloak		285/1		Oblivious
 Brown (fur?) cloak	285/2		Adam
 Green top		249/0		-
 Brown/orange dress	249/1		-
@@ -44,7 +44,7 @@ Brownish pants		738/3,5		-
 Shoes			585		-
 Spiked Shield		578		Oblivious
 Magic boomerang		550		Willem Jan
-Fire sword		551		-		(wrong clr. fire in SI)
+Fire sword		551		Oblivious
 Hawk			555		-
 Great dagger		561		Willem Jan
 Star bursts		565		-
